Simulate without RL agent, add new config files

--- a/aimmu/gym-memenv/gym_memenv/envs/setup/new_sgemm_baseline.cfg
+++ b/aimmu/gym-memenv/gym_memenv/envs/setup/new_sgemm_baseline.cfg
@@ -31,29 +31,29 @@ pg_allocation_policy = noalloc;
 
 
 watch_packet = -1;
-stats_file = kmeans_baseline;
+stats_file = sgemm_baseline;
 
-no_roll_over = 1;
-max_tot_mem_acc = 0x989680;//10,000,000  
-max_tot_mem_acc = 0x5f5e100;//100,000,000  
+//no_roll_over = 1;
+//max_tot_mem_acc = 0x989680;//10,000,000  
+//max_tot_mem_acc = 0x5f5e100;//100,000,000  
 
-max_tot_rollovers = 0xC8;//200 rollovers should be enough for spmv  
-max_tot_rollovers = 0xA;//10 rollovers should be enough for spmv  
-max_tot_rollovers = 0x2;//2 rollovers should be enough for spmv  
+//max_tot_rollovers = 0xC8;//200 rollovers should be enough for spmv  
+//max_tot_rollovers = 0xA;//10 rollovers should be enough for spmv  
+//max_tot_rollovers = 0x2;//2 rollovers should be enough for spmv  
 
-runfile = runlists/kmeans; 
-trace_folder = ../../../../trace_folder/benchmarks/naive-art;
+runfile = runlists/sgemm; 
+trace_folder = /home/grads/t/tiendat.ng.cs/ai-mmu/traces/benchmarks/naive-art;
 backprop_trace_limit = 10;
 lud_trace_limit = 629;
 pagerank_trace_limit =  595;
 rbm_trace_limit = 1133;
 sgemm_trace_limit = 2;
 spmv_trace_limit = 502;
-kmeans_trace_limit = 5;
+
 
 //adaptive_epoch_folder = adaptive_epoch_spmv;//folder to store the adaptive epoch series
 adaptive_epoch_series = adaptive_epoch_;//file/series name
-hop_avg_folder = hop_avg_spmv;//folder name
+//hop_avg_folder = hop_avg_spmv;//folder name
 hop_avg_series = hop_avg_;//file/series name
 hop_avg_freq = 100;
   
