--- a/aimmu/gym-memenv/gym_memenv/envs/setup/new_spmv_baseline.cfg
+++ b/aimmu/gym-memenv/gym_memenv/envs/setup/new_spmv_baseline.cfg
@@ -14,47 +14,48 @@ mem_row_miss_lat = 120;
 mem_queue_size = 256;
 num_vaults = 64;
 banks_per_vault = 8;
-resp_q_size = 512;
-pkt_buffer_per_vc = 16;
+resp_q_size = 4096;
+pkt_buffer_per_vc = 16;//number of packets each router port can hold
 req_pkt_size = 16;//in Bytes
 resp_pkt_size = 72;//in Bytes
-link_width = 16;//in Bytes
+link_width = 16;//in Bytes --> 128 bit
 port_positions = {0,3,12,15};
 num_port = 4;
 router_radix = 6;
-num_vnet = 3; 
-load_balance_baseline = 0;//load balance off by default
-  
+num_vnet = 2; 
+
 dis_migr = 1;//by default migration is on
 dis_training = 1;//by default training is on
 pg_allocation_policy = noalloc;
-
-
+  
 watch_packet = -1;
-stats_file = kmeans_baseline;
+stats_file = spmv_baseline;
 
-no_roll_over = 1;
-max_tot_mem_acc = 0x989680;//10,000,000  
-max_tot_mem_acc = 0x5f5e100;//100,000,000  
+//no_roll_over = 1;
 
-max_tot_rollovers = 0xC8;//200 rollovers should be enough for spmv  
-max_tot_rollovers = 0xA;//10 rollovers should be enough for spmv  
-max_tot_rollovers = 0x2;//2 rollovers should be enough for spmv  
+//max_tot_mem_acc = 0x2710;//10,000  
+//max_tot_mem_acc = 0x989680;//10,000,000  
+//max_tot_mem_acc = 0x5f5e100;//100,000,000  
 
-runfile = runlists/kmeans; 
-trace_folder = ../../../../trace_folder/benchmarks/naive-art;
-backprop_trace_limit = 10;
+//max_tot_rollovers = 0xC8;//200 rollovers  
+//max_tot_rollovers = 0x64;//100 rollovers  
+//max_tot_rollovers = 0x1E;//30 rollovers  
+//max_tot_rollovers = 0xA;//10 rollovers  
+//max_tot_rollovers = 0x2;//2 rollovers  
+//max_tot_rollovers = 0x2;//2 rollovers  
+
+runfile = runlists/spmv;  
+trace_folder = /home/grads/t/tiendat.ng.cs/ai-mmu/traces/benchmarks/naive-art;
+backprop_trace_limit = 3354;
 lud_trace_limit = 629;
 pagerank_trace_limit =  595;
 rbm_trace_limit = 1133;
 sgemm_trace_limit = 2;
 spmv_trace_limit = 502;
-kmeans_trace_limit = 5;
 
 //adaptive_epoch_folder = adaptive_epoch_spmv;//folder to store the adaptive epoch series
 adaptive_epoch_series = adaptive_epoch_;//file/series name
-hop_avg_folder = hop_avg_spmv;//folder name
+//hop_avg_folder = hop_avg_spmv;//folder name
 hop_avg_series = hop_avg_;//file/series name
 hop_avg_freq = 100;
-  
-//pg_profile_folder = tests/pg_reuse_pred/input/backprop.pg; 
+//pg_profile_folder = tests/pg_reuse_pred/input/spmv.pg; 
