Periodic stats printing mode

--- a/aimmu/gym-memenv/gym_memenv/envs/setup/new_backprop_baseline.cfg
+++ b/aimmu/gym-memenv/gym_memenv/envs/setup/new_backprop_baseline.cfg
@@ -27,6 +27,7 @@ load_balance_baseline = 0;//load balance off by default
   
 dis_migr = 1;//by default migration is on
 dis_training = 1;//by default training is on
+periodic_break = 1;
 pg_allocation_policy = noalloc;
 
 
