--- a/aimmu/gym-memenv/gym_memenv/envs/setup/new_rbm_baseline.cfg
+++ b/aimmu/gym-memenv/gym_memenv/envs/setup/new_rbm_baseline.cfg
@@ -26,6 +26,7 @@ num_vnet = 2;
 
 dis_migr = 1;//by default migration is on
 dis_training = 1;//by default training is on
+periodic_break = 1;
 pg_allocation_policy = noalloc;
   
 watch_packet = -1;
