--- a/aimmu/gym-memenv/gym_memenv/envs/setup/new_lud_baseline.cfg
+++ b/aimmu/gym-memenv/gym_memenv/envs/setup/new_lud_baseline.cfg
@@ -1,28 +1,28 @@
-num_proc = 4;
-mem_size = 16;
-tlb_size = 256;
-page_size = 4;
-x_dim = 4;
-y_dim = 4;
-topology = init/topo/mesh_4x4;
-r_algo = XY;
-router_stages = 2;
-max_mcq_size = 16;
-mem_acc_lat = 100;
-mem_row_hit_lat = 25;
-mem_row_miss_lat = 120;
-mem_queue_size = 256;
-num_vaults = 64;
-banks_per_vault = 8;
-resp_q_size = 512;
-pkt_buffer_per_vc = 16;//number of packets each router port can hold
-req_pkt_size = 16;//in Bytes
-resp_pkt_size = 72;//in Bytes
-link_width = 16;//in Bytes
-port_positions = {0,3,12,15};
-num_port = 4;
-router_radix = 6;
-num_vnet = 2; 
+//num_proc = 4;
+//mem_size = 16;
+//tlb_size = 256;
+//page_size = 4;
+//x_dim = 4;
+//y_dim = 4;
+//topology = init/topo/mesh_4x4;
+//r_algo = XY;
+//router_stages = 2;
+//max_mcq_size = 16;
+//mem_acc_lat = 100;
+//mem_row_hit_lat = 25;
+//mem_row_miss_lat = 120;
+//mem_queue_size = 256;
+//num_vaults = 64;
+//banks_per_vault = 8;
+//resp_q_size = 512;
+//pkt_buffer_per_vc = 16;//number of packets each router port can hold
+//req_pkt_size = 16;//in Bytes
+//resp_pkt_size = 72;//in Bytes
+//link_width = 16;//in Bytes
+//port_positions = {0,3,12,15};
+//num_port = 4;
+//router_radix = 6;
+//num_vnet = 2; 
 
 dis_migr = 1;//by default migration is on
 dis_training = 1;//by default training is on
