--- a/aimmu/gym-memenv/gym_memenv/envs/setup/new_pagerank_baseline.cfg
+++ b/aimmu/gym-memenv/gym_memenv/envs/setup/new_pagerank_baseline.cfg
@@ -8,6 +8,7 @@
 //r_algo = XY;
 //router_stages = 2;
 //max_mcq_size = 16;
+max_cmpq_size = 9999999999;
 //mem_acc_lat = 100;
 //mem_row_hit_lat = 25;
 //mem_row_miss_lat = 120;
@@ -22,7 +23,7 @@
 //port_positions = {0,3,12,15};
 //num_port = 4;
 //router_radix = 6;
-//num_vnet = 2; 
+num_vnet = 2; 
 
 dis_migr = 1;//by default migration is on
 dis_training = 1;//by default training is on
@@ -32,9 +33,9 @@ pg_allocation_policy = noalloc;
 watch_packet = -1;
 stats_file = pagerank_baseline;
 
-//no_roll_over = 1;
+no_roll_over = 1;
 //max_tot_mem_acc = 0x989680;//10,000,000  
-//max_tot_mem_acc = 0x5f5e100;//100,000,000  
+max_tot_mem_acc = 0x5f5e100;//100,000,000  
 
 //max_tot_rollovers = 0xC8;//200 rollovers should be enough for spmv  
 //max_tot_rollovers = 0xA;//10 rollovers should be enough for spmv  
