--- a/aimmu/gym-memenv/gym_memenv/envs/setup/new_rbm_baseline.cfg
+++ b/aimmu/gym-memenv/gym_memenv/envs/setup/new_rbm_baseline.cfg
@@ -7,7 +7,8 @@
 //topology = init/topo/mesh_4x4;
 //r_algo = XY;
 //router_stages = 2;
-//max_mcq_size = 16;
+//max_mcq_size = 256;
+max_cmpq_size = 9999999999;
 //mem_acc_lat = 100;
 //mem_row_hit_lat = 25;
 //mem_row_miss_lat = 120;
@@ -32,9 +33,9 @@ pg_allocation_policy = noalloc;
 watch_packet = -1;
 stats_file = rbm_baseline;
 
-//no_roll_over = 1;
+no_roll_over = 1;
 //max_tot_mem_acc = 0x989680;//10,000,000  
-//max_tot_mem_acc = 0x5f5e100;//100,000,000  
+max_tot_mem_acc = 0x5f5e100;//100,000,000  
 
 //max_tot_rollovers = 0xC8;//200 rollovers should be enough for spmv  
 //max_tot_rollovers = 0xA;//10 rollovers should be enough for spmv  
