--- a/aimmu/gym-memenv/gym_memenv/envs/setup/kmeans_learning.cfg
+++ b/aimmu/gym-memenv/gym_memenv/envs/setup/kmeans_learning.cfg
@@ -69,4 +69,4 @@ hop_avg_folder = hop_avg_spmv;//folder name
 hop_avg_series = hop_avg_;//file/series name
 hop_avg_freq = 100;
 
-pg_profile_folder = tests/pg_reuse_pred/input/; 
+//pg_profile_folder = tests/pg_reuse_pred/input/; 
