--- a/aimmu/gym-memenv/gym_memenv/envs/setup/new_backprop_baseline.cfg
+++ b/aimmu/gym-memenv/gym_memenv/envs/setup/new_backprop_baseline.cfg
@@ -59,4 +59,4 @@ adaptive_epoch_series = adaptive_epoch_;//file/series name
 hop_avg_series = hop_avg_;//file/series name
 hop_avg_freq = 100;
   
-//pg_profile_folder = tests/pg_reuse_pred/input/backprop.pg; 
+//pg_profile_folder = stats/backprop.pg; 
