Generating plots, change to DataCollectHook::collect

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,14 @@
         "iosfwd": "cpp",
         "fstream": "cpp",
         "span": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "*.tcc": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "vector": "cpp",
+        "forward_list": "cpp"
     }
 }
