Print last access of pages

--- a/aimmu/gym-memenv/gym_memenv/envs/setup/new_kmeans_baseline.cfg
+++ b/aimmu/gym-memenv/gym_memenv/envs/setup/new_kmeans_baseline.cfg
@@ -8,18 +8,18 @@
 //r_algo = XY;
 //router_stages = 2;
 //max_mcq_size = 16;
-//max_cmpq_size = 9999999999;
+//max_cmpq_size = 512;
 //mem_acc_lat = 100;
 //mem_row_hit_lat = 25;
 //mem_row_miss_lat = 120;
 //mem_queue_size = 256;
 //num_vaults = 64;
 //banks_per_vault = 8;
-//resp_q_size = 4096;
-//pkt_buffer_per_vc = 16;//number of packets each router port can hold
+//resp_q_size = 512;
+//pkt_buffer_per_vc = 16;
 //req_pkt_size = 16;//in Bytes
 //resp_pkt_size = 72;//in Bytes
-//link_width = 16;//in Bytes --> 128 bit
+//link_width = 16;//in Bytes
 //port_positions = {0,3,12,15};
 //num_port = 4;
 //router_radix = 6;
@@ -29,24 +29,19 @@ dis_migr = 1;//by default migration is on
 dis_training = 1;//by default training is on
 //periodic_break = 1;
 pg_allocation_policy = noalloc;
-  
+
 watch_packet = -1;
-stats_file = spmv_baseline;
+stats_file = pagerank_baseline;
 
 no_roll_over = 1;
-
-//max_tot_mem_acc = 0x2710;//10,000  
 //max_tot_mem_acc = 0x989680;//10,000,000  
 //max_tot_mem_acc = 0x5f5e100;//100,000,000  
 
-//max_tot_rollovers = 0xC8;//200 rollovers  
-//max_tot_rollovers = 0x64;//100 rollovers  
-//max_tot_rollovers = 0x1E;//30 rollovers  
-//max_tot_rollovers = 0xA;//10 rollovers  
-//max_tot_rollovers = 0x2;//2 rollovers  
-//max_tot_rollovers = 0x2;//2 rollovers  
+//max_tot_rollovers = 0xC8;//200 rollovers should be enough for spmv  
+//max_tot_rollovers = 0xA;//10 rollovers should be enough for spmv  
+//max_tot_rollovers = 0x2;//2 rollovers should be enough for spmv  
 
-runfile = runlists/spmv;  
+runfile = runlists/kmeans;  
 trace_folder = /home/grads/t/tiendat.ng.cs/ai-mmu/traces/benchmarks/naive-art;
 backprop_trace_limit = 3354;
 lud_trace_limit = 629;
@@ -55,9 +50,10 @@ rbm_trace_limit = 1133;
 sgemm_trace_limit = 1;
 spmv_trace_limit = 503;
 
+
 //adaptive_epoch_folder = adaptive_epoch_spmv;//folder to store the adaptive epoch series
 adaptive_epoch_series = adaptive_epoch_;//file/series name
 //hop_avg_folder = hop_avg_spmv;//folder name
 hop_avg_series = hop_avg_;//file/series name
 hop_avg_freq = 100;
-//pg_profile_folder = tests/pg_reuse_pred/input/spmv.pg; 
+//pg_profile_folder = tests/pg_reuse_pred/input/pagerank.pg; 
