--- a/aimmu/gym-memenv/gym_memenv/envs/setup/new_sgemm_baseline.cfg
+++ b/aimmu/gym-memenv/gym_memenv/envs/setup/new_sgemm_baseline.cfg
@@ -8,7 +8,7 @@
 //r_algo = XY;
 //router_stages = 2;
 //max_mcq_size = 16;
-max_cmpq_size = 9999999999;
+//max_cmpq_size = 9999999999;
 //mem_acc_lat = 100;
 //mem_row_hit_lat = 25;
 //mem_row_miss_lat = 120;
@@ -23,13 +23,13 @@ max_cmpq_size = 9999999999;
 //port_positions = {0,3,12,15};
 //num_port = 4;
 //router_radix = 6;
-//num_vnet = 1; 
+num_vnet = 5; 
 
 load_balance_baseline = 0;//load balance off by default
   
 dis_migr = 1;//by default migration is on
 dis_training = 1;//by default training is on
-periodic_break = 1;
+//periodic_break = 1;
 pg_allocation_policy = noalloc;
 
 
@@ -38,7 +38,7 @@ stats_file = sgemm_baseline;
 
 no_roll_over = 1;
 //max_tot_mem_acc = 0x989680;//10,000,000  
-max_tot_mem_acc = 0x5f5e100;//100,000,000  
+//max_tot_mem_acc = 0x5f5e100;//100,000,000  
 
 //max_tot_rollovers = 0xC8;//200 rollovers should be enough for spmv  
 //max_tot_rollovers = 0xA;//10 rollovers should be enough for spmv  
@@ -59,5 +59,4 @@ adaptive_epoch_series = adaptive_epoch_;//file/series name
 //hop_avg_folder = hop_avg_spmv;//folder name
 hop_avg_series = hop_avg_;//file/series name
 hop_avg_freq = 100;
-  
 //pg_profile_folder = tests/pg_reuse_pred/input/backprop.pg; 
